--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -39,10 +39,10 @@
    padding: 10px;
    font-family: monospace;
    margin-bottom: 8px;
+
  }
 
  .card-product .card-product-infos h2 {
-   color: black;
    font-weight: bold;
    text-align: center;
    font-family: monospace;
