--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -84,11 +84,11 @@
 .btn-flat {
   font-family: monospace;
   color: white;
-  padding: 5px 25px;
+  padding: 2px 25px;
   border-radius: 5px;
   background: #1EDD88;
   transition: background 0.3s ease;
-  margin: 8px 10px -25px 10px;
+  margin: 8px -5px -24px 8px;
   height: 28px;
   text-align: center;
 }
